--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.15.4",
+    "@mui/material": "^5.6.1",
+    "autoform": "^1.0.1",
     "bcrypt": "^5.0.1",
     "meteor-node-stubs": "^1.2.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "simpl-schema": "^1.12.0"
   },
   "meteor": {
     "mainModule": {
