--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoform": "^1.0.1",
     "bcrypt": "^5.0.1",
     "meteor-node-stubs": "^1.2.1",
+    "moment": "^2.29.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "simpl-schema": "^1.12.0"
